@@ -1,5 +1,5 @@
-QUICKLISP_DIST=2018-12-11
-SBCL_VERSION=1.4.14
+QUICKLISP_DIST=2019-03-07
+SBCL_VERSION=1.5.0
 export QUICKLISP_DIST
 export SBCL_VERSION
 
